frontend/tests/errors/ER-002/undefined_variable/test.vx
// @rfc: doc/vexel-rfc.md#errors--diagnostics
// @desc: Name resolution failures are reported as compile-time errors | Name resolution failure: undefined variable


&^main() -> #i32 {
    x + 5
}
